--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<head>
+		<title>Badger News</title>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+		<script src="/javascripts/angularApp.js"></script>
+		<style>.glyphicon-thumbs-up{cursor:pointer}</style>
+	</head>
+
+	<body ng-app="badgerNews">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					
+					<ui-view></ui-view>
+
+					<script type="text/ng-template" id="/home.html">
+						<div class="page-header">
+							<h1>Badger News</h1>
+						</div>
+						<div ng-repeat="post in posts | orderBy:'-upvotes'">
+							<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
+							{{post.upvotes}}
+							<span style="font-size:20px; margin-left:10px;">	
+								<a ng-show="post.link" href="{{post.link}}">
+									{{post.title}}
+								</a>
+								<span ng-hide="post.link">
+									{{post.title}}
+								</span>
+							</span>	
+							<span>
+								<a href="#/posts/{{$index}}">Comments</a>
+							</span>
+						</div>
+						<form ng-submit="addPost()" style="margin-top:30px;">
+							<h3>Add a new post</h3>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Title" ng-model="title"/>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Link" ng-model="link"/>
+							</div>
+							<button type="submit" class="btn btn-primary">Post</button>
+						</form>
+					</script>
+					<script type="text/ng-template" id="/posts.html">
+						<div class="page-header">
+							<h3>
+								<a ng-show="post.link" href="{{post.link}}">
+									{{post.title}}
+								</a>
+								<span ng-hide="post.link">
+									{{post.title}}
+								</span>
+							</h3>
+						</div>
+						<div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
+							<span class="glyphicon glyphicon-thumbs-up"
+								ng-click="incrementUpvotes(comment)"></span>
+								{{comment.upvotes}}-by {{comment.author}}
+							<span style="font-size:20px; margin-left:10px;">
+								{{comment.body}}
+							</span>
+						</div>
+						<form ng-submit="addComment()"
+							style="margin-top:30px;">
+							<h3>Add a new comment</h3>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Comment" ng-model="body">
+							</div>
+							<button type="submit" class="btn btn-primary">Post</button>
+						</form>
+					</script>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
