--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,6 +111,9 @@
 							<div class="form-group">
 								<input type="password" class="form-control" placeholder="Password" ng-model="user.password"/>
 							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="Email" ng-model="user.email">
+							</div>
 							<button type="submit" class="btn btn-primary">Register</button>
 						</form>
 					</script>
@@ -131,6 +134,12 @@
 							</div> 
 							<button type="submit" class="btn btn-primary">Log In</button>
 						</form>
+					</script>
+					<script type="text/ng-template" id="/verify.html">
+						<div class="page-header">
+							<h1>Badger News</h1>
+						</div>
+						<p>A verification email will be sent to your email address shortly. Please respond to message to access your account.</p>
 					</script>
 				</div>
 			</div>
