--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,15 @@
 	<body ng-app="badgerNews">
 		<div class="container">
 			<div class="row">
-				<nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
+				<nav class="navbar navbar-inverse" ng-controller="NavCtrl">
 					<ul class="nav navbar-nav">
 						<li ng-show="isLoggedIn()"><a>{{currentUser()}}</a></li>
 						<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
 						<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
 						<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+					</ul>
+					<ul class="nav navbar-nav pull-right">
+						<li><a href="/#/home">Home</a></li>
 					</ul>
 				</nav>
 			</div>
