--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,16 +14,32 @@
 	<body ng-app="badgerNews">
 		<div class="container">
 			<div class="row">
-				<nav class="navbar navbar-inverse" ng-controller="NavCtrl">
-					<ul class="nav navbar-nav">
-						<li ng-show="isLoggedIn()"><a>{{currentUser()}}</a></li>
-						<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
-						<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-						<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
-					</ul>
-					<ul class="nav navbar-nav pull-right">
-						<li><a href="/#/home">Home</a></li>
-					</ul>
+				<nav class="navbar navbar-default" role="navigation" ng-controller="NavCtrl">
+				    <!-- Brand and toggle get grouped for better mobile display -->
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				      </button>
+				      <a class="navbar-brand" href="/#/home">
+				       	Badger-News
+				      </a>
+				    </div>
+
+				    <!-- Collect the nav links, forms, and other content for toggling -->
+				    <div class="collapse navbar-collapse" uib-collapse="navbarCollapsed">
+					    <ul class="nav navbar-nav">
+							<li ng-show="isLoggedIn()"><a>{{currentUser()}}</a></li>
+							<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
+							<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+							<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+						</ul>
+						<ul class="nav navbar-nav pull-right">
+							<li><a href="/#/home">Home</a></li>
+						</ul>
+				    </div>
 				</nav>
 			</div>
 			<div class="row">
