--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,10 @@
 	<head>
 		<title>Badger News</title>
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="/javascripts/angularApp.js"></script>
 		<style>.glyphicon-thumbs-up{cursor:pointer}</style>
 	</head>
@@ -24,7 +24,7 @@
 				        <span class="icon-bar"></span>
 				      </button>
 				      <a class="navbar-brand" href="/#/home">
-				       	Badger-News
+				       	Badger News
 				      </a>
 				    </div>
 
@@ -35,9 +35,6 @@
 							<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
 							<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
 							<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
-						</ul>
-						<ul class="nav navbar-nav pull-right">
-							<li><a href="/#/home">Home</a></li>
 						</ul>
 				    </div>
 				</nav>
